[package]
name = "dl_types"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Core dependencies
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# Minimal bevy for Component derives and basic types
bevy_ecs = { workspace = true }
bevy_math = { workspace = true } 
bevy_color = { workspace = true }
bevy_asset = { workspace = true }
bevy_animation = { workspace = true }
bevy_scene = { workspace = true }
bevy_transform = { workspace = true }

# For moved type dependencies
regex = { workspace = true }
cleasby_vigfusson_dictionary = { workspace = true }
chrono = { workspace = true, features = ["serde"] }

# For audit functionality (only trait, not implementation)
# csv will be in dl_audit crate

# HBF analysis types
uuid = { workspace = true }
