[package]
name = "dragons-docs"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Documentation and manual generation for Dragon's Labyrinth"

[dependencies]
# Use style-guide for consistent theming
style-guide = { path = "../style-guide" }

# Documentation generation tools
mdbook = "0.4"

# Markdown processing
markdown = "1.0.0"

# For generating dynamic content from game data
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
walkdir = { workspace = true }

# For API documentation integration
database-orm = { path = "../database-orm" }
game-assets = { path = "../game-assets" }

[build-dependencies]
# For preprocessing documentation
anyhow = { workspace = true }
walkdir = { workspace = true }
style-guide = { path = "../style-guide" }

[[bin]]
name = "build-docs"
path = "src/bin/build_docs.rs"

[[bin]]
name = "serve-docs"
path = "src/bin/serve_docs.rs"
