[package]
name = "game-assets"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Asset loading and management for Dragon's Labyrinth"

[dependencies]
bevy = { workspace = true }
blender-bridge = { path = "../blender-bridge" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
anyhow = { workspace = true }
walkdir = "2.5.0"
toml = "0.9"
thiserror = { workspace = true }
tracing = { workspace = true }

[build-dependencies]
blender-bridge = { path = "../blender-bridge" }
toml = "0.9"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
walkdir = "2.5"
