[package]
name = "game-assets"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Dragon's Labyrinth - Unified Asset Management and Generation"

[lib]
name = "game_assets"
path = "src/lib.rs"

[dependencies]
# Serialization
serde = { workspace = true }

# Math and graphics
glam = "0.30"
palette = "0.7"

# Utilities
fastrand = "2.3"

[build-dependencies]
glob = "0.3"
blender-bridge = { path = "../blender-bridge" }
