[package]
name = "game-assets"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Dragon's Labyrinth - Unified Asset Management and Generation"

[lib]
name = "game_assets"
path = "src/lib.rs"

[dependencies]
# Serialization
serde = { workspace = true }

# Math and graphics
glam = { workspace = true }
palette = { workspace = true }

# Utilities
fastrand = { workspace = true }

[build-dependencies]
glob = { workspace = true }
blender-bridge = { workspace = true }
