[package]
name = "game-content-static"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Dragon's Labyrinth - Static Game Content and Asset Generation"

[lib]
name = "game_content_static"
path = "src/lib.rs"

[dependencies]
# Serialization
serde = { workspace = true }

# Math and graphics
glam = "0.29"
palette = "0.7"

# Utilities
fastrand = "2.3"

[build-dependencies]
glob = "0.3"
blender-bridge = { path = "../blender-bridge" }