[package]
name = "game-database"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "game_database"
path = "src/lib.rs"

[dependencies]
# Database ORM (now integrated directly)
sea-orm = { version = "1.1.14", features = ["sqlx-sqlite", "runtime-tokio-rustls"] }

# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
toml = { workspace = true }

# Time and UUID for sophisticated tracking
chrono = { version = "0.4.41", features = ["serde"] }
uuid = { version = "1.18.0", features = ["v4", "serde"] }

# Async runtime for complex operations
tokio = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Async trait support for database operations
async-trait = "0.1"

# Logging for sophisticated system debugging
tracing = { workspace = true }

# Regular expressions for parsing
regex = { workspace = true }

# HTML parsing for HBF import
scraper = { workspace = true }

# Bevy ECS integration
bevy = "0.16.1"

# MCP server framework for cross-system queries
jsonrpc-core = "18.0"
jsonrpc-http-server = "18.0"

# Tracing for MCP server
tracing-subscriber = "0.3"
futures = "0.3.31"
dirs = "6.0.0"

[build-dependencies]
# Build script dependencies - models now integrated directly
game-assets = { path = "../game-assets" }
sea-orm = { version = "1.1.14", features = ["sqlx-sqlite", "runtime-tokio-rustls"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros"] }
walkdir = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.18", features = ["v4"] }
anyhow = { workspace = true }

# MCP server removed - no longer needed with 70k+ entities baked in

[dev-dependencies]
tokio-test = "0.4"
