[package]
name = "game-database"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "game_database"
path = "src/lib.rs"

[dependencies]
# Database ORM (now integrated directly)
sea-orm = { workspace = true, features = ["sqlx-sqlite", "runtime-tokio-rustls"] }

# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
toml = { workspace = true }

# Time and UUID for sophisticated tracking
chrono = { workspace = true, features = ["serde"] }
uuid = { workspace = true, features = ["v4", "serde"] }

# Async runtime for complex operations
tokio = { workspace = true, features = ["full"] }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Async trait support for database operations
async-trait = { workspace = true }

# Logging for sophisticated system debugging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Regular expressions for parsing
regex = { workspace = true }

# HTML parsing for HBF import
scraper = { workspace = true }

# Bevy ECS integration
bevy = { workspace = true }
futures = { workspace = true }
dirs = { workspace = true }

[build-dependencies]
# Build script dependencies - models now integrated directly
game-assets = { workspace = true }
sea-orm = { workspace = true, features = ["sqlx-sqlite", "runtime-tokio-rustls"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros"] }
walkdir = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
uuid = { workspace = true, features = ["v4"] }
anyhow = { workspace = true }

# MCP server removed - no longer needed with 70k+ entities baked in

[dev-dependencies]
tokio-test = { workspace = true }
