[package]
name = "game-dialogue"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Dialogue generation and YarnSpinner integration for Dragon's Labyrinth"

[[bin]]
name = "generate-content"
path = "src/bin/generate.rs"

[dependencies]
# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# OpenAI integration
openai_dive = { workspace = true }

# UUID generation
uuid = { workspace = true, features = ["v4", "serde"] }

# Logging
tracing = { workspace = true }

# Template engine
minijinja = { workspace = true }

# Compression for token optimization
flate2 = { workspace = true }
tiktoken-rs = { workspace = true }
regex.workspace = true
md5 = { workspace = true }
chrono.workspace = true
game-assets = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
