[package]
name = "game-engine"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Dragon's Labyrinth - Horror-First RPG Game Engine"

[lib]
name = "game_engine"
path = "src/lib.rs"

[[bin]]
name = "dragons-labyrinth"
path = "src/main.rs"

[dependencies]
# Internal crates
game-database = { workspace = true }
game-assets = { workspace = true }

# Game engine core
bevy = { workspace = true, features = ["default"] }

# Serialization (common utilities)
serde = { workspace = true }
serde_json = { workspace = true }

# Hex grid system (game-specific)
hexx = { workspace = true, features = ["algorithms", "serde"] }

# Map generation (game-specific)
mapgen = { workspace = true }

# ECS Tilemap (game-specific)
bevy_ecs_tilemap = { workspace = true }

# Database (shared with game-database)
sea-orm = { workspace = true, features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros"] }
sqlx = { workspace = true, features = ["sqlite", "runtime-tokio-rustls"] }

# Async runtime (common utility)
tokio = { workspace = true }

# Random number generation (game-specific)
rand = { workspace = true }
fastrand = { workspace = true }

# Concurrency (game-specific)
dashmap = { workspace = true }
parking_lot = { workspace = true }

# Logging (common utilities)
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
indicatif = { workspace = true }

# Output (common utilities)
colored = { workspace = true }

# Audio (game-specific)
rodio = { workspace = true, features = ["vorbis", "wav"] }
bevy_kira_audio = { workspace = true }

# Cross-platform directories (game-specific)
directories = { workspace = true }

# Error handling (common utilities)
anyhow = { workspace = true }
thiserror = { workspace = true }

# Game-specific dependencies
noise = { workspace = true }
pathfinding = { workspace = true }
bevy_hanabi = { workspace = true }
bevy-yoleck = { workspace = true }
bevy_yarnspinner = { workspace = true }
bevy_cobweb_ui = { workspace = true }
bevy_cobweb = { workspace = true }
avian3d = { workspace = true }
# Dependencies already handled by game-assets

[build-dependencies]
# Build-time AI generation tools
ai-bridge = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
web-sys = "0.3"
wasm-bindgen-futures = "0.4"

[dev-dependencies]
criterion = { workspace = true }
proptest = { workspace = true }
