[package]
name = "dragons_labyrinth"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Dragon's Labyrinth - Horror-First RPG built with Bevy"

[[bin]]
name = "dragons_labyrinth"
path = "src/main.rs"

[dependencies]
# Internal crates
build_tools = { path = "../build_tools" }

# Core Bevy with all features needed for the game
bevy = { workspace = true, features = [
    "bevy_asset",
    "bevy_winit", 
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_render",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "bevy_audio",
    "bevy_scene",
    "bevy_gltf",
    "multi-threaded",
    "png",
    "vorbis",
    "x11",
    "wayland",
    "webgl2",
    "bevy_gilrs",
    "serialize",
    "bevy_debug_stepping",
] }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Random number generation
rand = { workspace = true }
fastrand = { workspace = true }

# Hex grid system
hexx = { workspace = true }

# Map generation
mapgen = { workspace = true }

# ECS Tilemap
bevy_ecs_tilemap = { workspace = true }

# Database
sea-orm = { workspace = true }
sqlx = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Concurrency
dashmap = { workspace = true }
parking_lot = { workspace = true }

# Logging and progress
indicatif = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Colored output
colored = { workspace = true }

# Audio
rodio = { workspace = true }

# Cross-platform directories
directories = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Additional game-specific dependencies
noise = "0.9"
pathfinding = "4.9"
bevy_rapier3d = "0.28"
bevy_hanabi = "0.13"
bevy_kira_audio = "0.21"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { workspace = true }
web-sys = { workspace = true }
wasm-bindgen-futures = { workspace = true }

[dev-dependencies]
criterion = "0.5"
proptest = "1.5"