[package]
name = "hexroll_exporter"
version = "0.1.0"
edition = "2021"
description = "Export data from Hexroll Backpack (.hbf) files and load them into a Bevy ECS world"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1"
bevy = { version = "0.13", default-features = false, features = ["bevy_winit"] }
clap = { version = "4", features = ["derive"] }
hexx = "0.9"
rusqlite = { version = "0.29", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
scraper = "0.18"

# optional dependencies for demonstration; not required for exports
thiserror = "1"