[package]
name = "hbf-parser"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Parse and integrate HBF (Hexroll Backpack Format) export data into Dragon's Labyrinth"

[lib]
name = "hbf_parser"
path = "src/lib.rs"

[dependencies]
# Internal crates
database-orm = { path = "../database-orm" }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
ron = { workspace = true }

# Database - using same setup as game-database
sea-orm = { version = "1.1.14", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros"] }

# HTML parsing for extracting structured data from entity pages
scraper = { workspace = true }

# Hex grid system
hexx = "0.21"

# Async runtime
tokio = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# Bevy ECS integration
bevy = { workspace = true, features = ["bevy_winit"] }

# CLI for standalone usage
clap = { version = "4", features = ["derive"] }

# UUID handling
uuid = { version = "1.18", features = ["v4", "serde"] }

# Async trait support
async-trait = "0.1"

[build-dependencies]
# Build script dependencies - align with game-database approach
sea-orm = { version = "1.1.14", features = ["sqlx-sqlite", "runtime-tokio-rustls"] }
scraper = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ron = { workspace = true }
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros"] }
anyhow = { workspace = true }
